--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,7 @@
     <string name="registration_successful">Registraion successful!</string>
     <string name="login_successful">Login Successful!</string>
     <string name="request_canceled">Request canceled</string>
+    <string name="login">Login</string>
+    <string name="log_out">Log Out</string>
+    <string name="or_log_in">or Login?</string>
 </resources>
